@@ -1128,7 +1128,7 @@ One mystery left to resolve.  How can we get Sage to give us infinitely many sol
 <theorem acro="PSPHS" index="solution set">
 <title>Particular Solution Plus Homogeneous Solutions</title>
 <statement>
-<p>Suppose that $\vect{w}$ is one solution to the linear system of equations $\linearsystem{A}{b}$.  Then $\vect{y}$ is a solution to $\linearsystem{A}{b}$ if and only if $\vect{y}=\vect{w}+\vect{z}$ for some vector $\vect{z}\in\nsp{A}$.</p>
+<p>Suppose that $\vect{w}$ is one solution to the linear system of equations $\linearsystem{A}{\vect{b}}$.  Then $\vect{y}$ is a solution to $\linearsystem{A}{\vect{b}}$ if and only if $\vect{y}=\vect{w}+\vect{z}$ for some vector $\vect{z}\in\nsp{A}$.</p>
 
 </statement>
 
@@ -1190,7 +1190,7 @@ One mystery left to resolve.  How can we get Sage to give us infinitely many sol
 </alignmath>
 Applying <acroref type="theorem" acro="SLSLC" /> we see that the vector $\vect{y}$ is a solution to $\linearsystem{A}{\vect{b}}$.</p>
 
-<p><implyforward />  Suppose $\vect{y}$ is a solution to $\linearsystem{A}{b}$.  Then
+<p><implyforward />  Suppose $\vect{y}$ is a solution to $\linearsystem{A}{\vect{b}}$.  Then
 <alignmath>
 \zerovector
 <![CDATA[&=]]>
@@ -1231,7 +1231,7 @@ $\vect{y}=\vect{w}+\vect{z}$, as desired.</p>
 </proof>
 </theorem>
 
-<p>After proving <acroref type="theorem" acro="NMUS" /> we commented (insufficiently) on the negation of one half of the theorem.  Nonsingular coefficient matrices lead to unique solutions for every choice of the vector of constants.  What does this say about singular matrices?  A singular matrix $A$ has a nontrivial null space (<acroref type="theorem" acro="NMTNS" />).  For a given vector of constants, $\vect{b}$, the system $\linearsystem{A}{b}$ could be inconsistent, meaning there are no solutions.  But if there is at least one solution ($\vect{w}$), then <acroref type="theorem" acro="PSPHS" /> tells us there will be infinitely many solutions because of the role of the infinite null space for a singular matrix.  So a system of equations with a singular coefficient matrix <em>never</em> has a unique solution.  Either there are no solutions, or infinitely many solutions, depending on the choice of the vector of constants ($\vect{b}$).</p>
+<p>After proving <acroref type="theorem" acro="NMUS" /> we commented (insufficiently) on the negation of one half of the theorem.  Nonsingular coefficient matrices lead to unique solutions for every choice of the vector of constants.  What does this say about singular matrices?  A singular matrix $A$ has a nontrivial null space (<acroref type="theorem" acro="NMTNS" />).  For a given vector of constants, $\vect{b}$, the system $\linearsystem{A}{\vect{b}}$ could be inconsistent, meaning there are no solutions.  But if there is at least one solution ($\vect{w}$), then <acroref type="theorem" acro="PSPHS" /> tells us there will be infinitely many solutions because of the role of the infinite null space for a singular matrix.  So a system of equations with a singular coefficient matrix <em>never</em> has a unique solution.  Either there are no solutions, or infinitely many solutions, depending on the choice of the vector of constants ($\vect{b}$).</p>
 
 <example acro="PSHS" index="particular solutions">
 <title>Particular solutions, homogeneous solutions, Archetype D</title>
