@@ -1332,7 +1332,7 @@ that is, $A^n = \zeromatrix_{3,3}$ for $n\ge 3$.
 <exercise type="T" number="10" rough="One instance with uniq sln implies nonsingular">
 <problem contributor="robertbeezer">Suppose that $A$ is a square matrix and there is a vector, $\vect{b}$, such that $\linearsystem{A}{\vect{b}}$ has a unique solution.  Prove that $A$ is nonsingular.  Give a direct proof (perhaps appealing to <acroref type="theorem" acro="PSPHS" />) rather than just negating a sentence from the text discussing a similar situation.
 </problem>
-<solution contributor="robertbeezer">Since $\linearsystem{A}{b}$ has at least one solution, we can apply <acroref type="theorem" acro="PSPHS" />.  Because the solution is assumed to be unique, the null space of $A$ must be trivial.  Then <acroref type="theorem" acro="NMTNS" /> implies that $A$ is nonsingular.<br /><br />
+<solution contributor="robertbeezer">Since $\linearsystem{A}{\vect{b}}$ has at least one solution, we can apply <acroref type="theorem" acro="PSPHS" />.  Because the solution is assumed to be unique, the null space of $A$ must be trivial.  Then <acroref type="theorem" acro="NMTNS" /> implies that $A$ is nonsingular.<br /><br />
 The converse of this statement is a trivial application of <acroref type="theorem" acro="NMUS" />.  That said, we could extend our NSMxx series of theorems with an added equivalence for nonsingularity, <q>Given a single vector of constants, $\vect{b}$, the system $\linearsystem{A}{\vect{b}}$ has a unique solution.</q>
 </solution>
 </exercise>
@@ -1424,7 +1424,7 @@ So, $B\vect{x}\in\nsp{A}$.  Because $A$ is nonsingular, it has a trivial null sp
 <![CDATA[&=\vect{b}&&]]>\text{<acroref type="property" acro="ZC" />}\\
 </alignmath>
 demonstrating that $\vect{y}$ is a solution.<br /><br />
-<implyforward />  Suppose $\vect{y}$ is a solution to $\linearsystem{A}{b}$.  Then
+<implyforward />  Suppose $\vect{y}$ is a solution to $\linearsystem{A}{\vect{b}}$.  Then
 <alignmath>
 A(\vect{y}-\vect{w})
 <![CDATA[&=A\vect{y}-A\vect{w}&&]]>\text{<acroref type="theorem" acro="MMDAA" />}\\
