@@ -17,6 +17,7 @@ Typo:  LaTeX/XML formatting in Solutions SSLE.M10, LISS.C21, B.C11 (Caden Robins
 Typo:  Exercise TSS.T20, fixed link to notation (Caden Robinson)
 Typo:  Spelling and grammar, Annotated Acronyms VS (Nick Butterfield)
 Typo:  LaTeX/XML formatting, Proof of SLSLC, discussion after VSPCV
+Typo:  Several LS(A,b) without bold  b  vector (Sophie Bartolomeo)
 
 
 MAJOR SOURCE FORMAT CHANGE
